fix z-index

--- a/src/components/DecoupledOverlay/_decoupledoverlay.scss
+++ b/src/components/DecoupledOverlay/_decoupledoverlay.scss
@@ -19,7 +19,7 @@
 
 .#{$eccgui}-decoupled-overlay {
     &.#{$prefix-blueprintjs}-popover {
-        z-index: 8000;
+        z-index: 8001;
     }
 
     &--small {
